<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    tools:context=".ui.EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    style="@style/LabelOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemName"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/image_url" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imageUrlField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editImageUrl"
                    style="@style/LabelOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnImageUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/itemImage"
            android:layout_below="@+id/itemImage"
            android:text="@string/upload" />

        <LinearLayout
            android:id="@+id/itemShelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnImageUpload"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                style="@style/LabelOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/shelf" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shelfCodeField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editShelfCode"
                    style="@style/LabelOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemCurrentQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemShelf"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                style="@style/LabelOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/quantity" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currentField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/current"
                app:hintAnimationEnabled="true"
                android:layout_weight="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCurrent"
                    style="@style/LabelOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemMaxQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemCurrentQuantity"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                style="@style/LabelOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maxField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/maximum"
                app:hintAnimationEnabled="true"
                android:layout_weight="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editMax"
                    style="@style/LabelOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemMaxQuantity"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                style="@style/LabelOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/price" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:prefixText="$"
                app:prefixTextAppearance="@style/Prefix">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPrice"
                    style="@style/LabelOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:includeFontPadding="false"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:paddingVertical="14dp"
                    android:textAlignment="textEnd"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemPrice"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                style="@style/LabelOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/status" />

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                android:layout_weight="3"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAffirm"
            style="@style/LabelOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemStatus"
            android:layout_marginTop="24dp"
            android:background="@drawable/first_btn_bg"
            android:paddingVertical="10dp"
            android:text="@string/insert"
            android:textAllCaps="false"
            android:textColor="@color/secondary"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            style="@style/LabelOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAffirm"
            android:layout_marginTop="20dp"
            android:background="@drawable/second_btn_bg"
            android:paddingVertical="10dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>